[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mobauto2-benders"
version = "0.1.0"
description = "Benders decomposition approach for the MobAuto2 project."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
  "pyomo",
  "pyyaml",
]

[project.scripts]
mobauto2-benders = "mobauto2_benders.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
